unicard_types_macro/tests/ui/enum_test.stderr
error[E0277]: the trait bound `*const i32: WasmType32` is not satisfied
 --> tests/ui/enum_test.rs:6:7
  |
6 |     B(*const i32),
  |       ^^^^^^^^^^ the trait `WasmType32` is not implemented for `*const i32`
  |
  = help: the trait `WasmType32` is implemented for `i32`

error[E0277]: the trait bound `File: WasmType32` is not satisfied
 --> tests/ui/enum_test.rs:8:12
  |
8 |         x: std::fs::File
  |            ^^^^^^^^^^^^^ the trait `WasmType32` is not implemented for `File`
  |
  = help: the following other types implement trait `WasmType32`:
            i8
            i16
            i32
            i64
            u8
            u16
            u32
            u64
          and $N others
